--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti107:4.1": "Da quelli che vivono con una casa, ",
   "iti107:4.2": "i senza casa accettano il saio, ",
   "iti107:4.3": "i requisiti, e l’alloggio, ",
-  "iti107:4.4": "rimuovendo il pericolo ",
+  "iti107:4.4": "senza rischio, ",
   "iti107:5.1": "fortunato nel dipendere ",
   "iti107:5.2": "dal laico per cercare una casa/tetto ",
   "iti107:5.3": "Quelli che hanno fede negli arahant ",
