Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti107:4.3": "i requisiti, e l’alloggio, ",
   "iti107:4.4": "senza rischio, ",
   "iti107:5.1": "fortunati di dipendere ",
-  "iti107:5.2": "dal laico per cercare una casa/tetto ",
+  "iti107:5.2": "dal laico per cercare una tetto. ",
   "iti107:5.3": "Quelli che hanno fede negli arahant ",
   "iti107:5.4": "contemplando la nobile saggezza?? ",
   "iti107:6.1": "in cammino qui nel Dhamma ",
