Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -16,6 +16,6 @@
   "iti107:5.4": "contemplando la nobile saggezza?? ",
   "iti107:6.1": "in cammino qui nel Dhamma ",
   "iti107:6.2": "sulla strada che porta in una buona destinazione ",
-  "iti107:6.3": "coloro che si dilettano nel mondo dei Deva ",
+  "iti107:6.3": "si dilettano nel mondo dei Deva ",
   "iti107:6.4": "sono felici seguendo i propri desideri sensuali (appagati? *** "
 }
