Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti107:5.2": "dal laico per cercare una tetto. ",
   "iti107:5.3": "Quelli che hanno fede negli arahant ",
   "iti107:5.4": "contemplando la nobile saggezza?? ",
-  "iti107:6.1": "Sono in cammino in questa vita nel Dhamma ",
+  "iti107:6.1": "Sono in cammino in questa vita nel Dhamma, ",
   "iti107:6.2": "la strada che porta in una buona destinazione, ",
   "iti107:6.3": "si dilettano nel mondo dei Deva ",
   "iti107:6.4": "sono felici seguendo i propri desideri sensuali (appagati? *** "
