Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -17,5 +17,5 @@
   "iti107:6.1": "In cammino in questa vita secondo il Dhamma, ",
   "iti107:6.2": "sulla strada che porta in una buona destinazione, ",
   "iti107:6.3": "si dilettano nel mondo dei Deva ",
-  "iti107:6.4": "sono felici seguendo i propri desideri sensuali (appagati? *** "
+  "iti107:6.4": "e sono felici seguendo i propri desideri sensuali (appagati? *** "
 }
