Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti107:3.4": "suprema liberazione da ogni giogo** ",
   "iti107:4.1": "Da quelli che vivono con una casa, ",
   "iti107:4.2": "i senza casa accettano il saio, ",
-  "iti107:4.3": "i requisiti, e l’alloggio, ",
+  "iti107:4.3": "i requisiti, e alloggio, ",
   "iti107:4.4": "senza rischio, ",
   "iti107:5.1": "fortunati di dipendere ",
   "iti107:5.2": "dal laico per cercare una tetto. ",
