Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti107:4.1": "Da quelli che vivono con una casa, ",
   "iti107:4.2": "i senza casa accettano il saio, ",
   "iti107:4.3": "i requisiti, e alloggio, ",
-  "iti107:4.4": "protezione dal pericolo. ",
+  "iti107:4.4": "per proteggere dal pericolo. ",
   "iti107:5.1": "fortunati di dipendere ",
   "iti107:5.2": "dal laico per cercare una tetto. ",
   "iti107:5.3": "Quelli che hanno fede negli arahant ",
