--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti107:4.3": "i requisiti, e alloggio, ",
   "iti107:4.4": "per proteggere dal pericolo. ",
   "iti107:5.1": "Dipendendo dal Fortunato, ",
-  "iti107:5.2": "i laici dediti alla vita domestica ",
+  "iti107:5.2": "i laici dediti alla vita domestica, ",
   "iti107:5.3": "Quelli che hanno fede negli arahant ",
   "iti107:5.4": "contemplando la nobile saggezza?? ",
   "iti107:6.1": "In cammino in questa vita secondo il Dhamma, ",
