--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti107:5.2": "i laici dediti alla vita domestica, ",
   "iti107:5.3": "hanno fede negli arahant, ",
   "iti107:5.4": "mistici dalla nobile saggezza. ",
-  "iti107:6.1": "In cammino in questa vita secondo il Dhamma, ",
+  "iti107:6.1": "Seguendo il Dhamma in questa vita, ",
   "iti107:6.2": "sulla strada che porta in una buona destinazione, ",
   "iti107:6.3": "si dilettano nel mondo dei Deva ",
   "iti107:6.4": "e sono felici seguendo i propri desideri sensuali (appagati? *** "
