--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -15,7 +15,7 @@
   "iti107:5.3": "hanno fede negli arahant, ",
   "iti107:5.4": "mistici dalla nobile saggezza. ",
   "iti107:6.1": "Avendo praticato in questa vita il Dhamma, ",
-  "iti107:6.2": "secondo la strada che porta in una buona destinazione, ",
+  "iti107:6.2": "il sentiero che conduce in una buona destinazione, ",
   "iti107:6.3": "si dilettano nel mondo dei Deva ",
   "iti107:6.4": "felici appagando i propri desideri sensuali. *** "
 }
