--- a/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "iti108:2.1": "Qualsiasi cercatore sia subdolo, ostinato, ciarlone, adorno, arrogante, distratto, quel cercatore non è uno mio discepolo. "
+  "iti108:2.1": "Qualsiasi cercatore sia subdolo, ostinato, ciarlone, adorno, arrogante, distratto, quel cercatore non è uno mio discepolo. ",
+  "iti108:2.2": "Si è allontanato da questo Dhamma Vinaya, non c’è per esso più crescita, progresso e maturità in questo Dhamma Vinaya. "
 }
