--- a/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
@@ -3,5 +3,6 @@
   "iti108:2.2": "Si è allontanato da questo Dhamma Vinaya, non si appresta più crescita, progresso e maturità in questo Dhamma Vinaya. ",
   "iti108:2.3": "Qualsiasi cercatore non sia subdolo, ciarlone o ostinato, ma invece saggio e ben raccolto, quel cercatore è un mio discepolo. ",
   "iti108:2.4": "Non si è allontanato da questo Dhamma Vinaya, e si appresta a più crescita, progresso e maturità in questo Dhamma Vinaya. ",
-  "iti108:3.1": "Subdoli, ostinati, ciarloni, adorni, "
+  "iti108:3.1": "Subdoli, ostinati, ciarloni, adorni, ",
+  "iti108:3.2": "arroganti, e distratti "
 }
