Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti108:2.4": "Non si è allontanato da questo Dhamma Vinaya, e si appresta a più crescita, progresso e maturità in questo Dhamma Vinaya. ",
   "iti108:3.1": "Subdoli, ostinati, ciarloni, adorni, ",
   "iti108:3.2": "arroganti, e distratti ",
-  "iti108:3.3": "non crescono in questo Dhamma "
+  "iti108:3.3": "non crescono in questo Dhamma ",
+  "iti108:3.4": "insegnato dal Sammāsambuddha. "
 }
