Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
@@ -6,5 +6,6 @@
   "iti108:3.1": "Quello che sono subdoli, ostinati, ciarloni, adorni, ",
   "iti108:3.2": "arroganti e distratti ",
   "iti108:3.3": "non crescono in questo Dhamma ",
-  "iti108:3.4": "insegnato dal Sammāsambuddha. "
+  "iti108:3.4": "insegnato dal Sammāsambuddha. ",
+  "iti108:4.1": "Quelli che non sono subdoli, ciarloni o ostinati, "
 }
