--- a/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
@@ -7,5 +7,6 @@
   "iti108:3.2": "arroganti e distratti ",
   "iti108:3.3": "non crescono in questo Dhamma ",
   "iti108:3.4": "insegnato dal Sammāsambuddha. ",
-  "iti108:4.1": "Quelli che non sono subdoli, ciarloni o ostinati, "
+  "iti108:4.1": "Quelli che non sono subdoli, ciarloni o ostinati, ",
+  "iti108:4.2": "ma invece saggi e ben raccolti, "
 }
