Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
@@ -9,5 +9,6 @@
   "iti108:3.4": "insegnato dal Sammāsambuddha. ",
   "iti108:4.1": "Quelli che non sono subdoli, ciarloni o ostinati, ",
   "iti108:4.2": "ma invece saggi e ben raccolti, ",
-  "iti108:4.3": "quelli crescono in questo Dhamma "
+  "iti108:4.3": "quelli crescono in questo Dhamma ",
+  "iti108:4.4": "insegnato dal Sammāsambuddha. "
 }
