--- a/translation/th/site/interface_translation-th-site.json
+++ b/translation/th/site/interface_translation-th-site.json
@@ -120,7 +120,7 @@
   "interface:viewComfyButtonText": "ระยะห่าง",
   "interface:toolsButtonText": "มุมมอง",
   "interface:infoButtonText": "ข้อมูล",
-  "interface:showParallelsButtonText": "คู่เทียบเคียงคู่เทียบเคียง",
+  "interface:showParallelsButtonText": "คู่เทียบ",
   "interface:showToCButtonText": "เนื้อหา",
   "interface:showParallelTableViewButtonText": "ตาราง",
   "interface:searchOptionsButtonText": "ภาษา",
