--- a/translation/pl/site/interface_translation-pl-site.json
+++ b/translation/pl/site/interface_translation-pl-site.json
@@ -15,13 +15,7 @@
   "dictionary:lookup": "Słownik ",
   "dictionary:lookupDictionaryEnabled": "{lookupDictionary} słownik odnośników jest teraz włączony. ",
   "dictionary:none": "Wyłączone ",
-  "dictionary:onlyWorks": "Ta opcja działa tylko z niektórymi tekstami, między innymi z tłumaczeniami autorstwa Sujato oraz Brahmali. ",
   "dictionary:paliLookupDictionaryDisabled": "Słownik odnośników Pali jest teraz wyłączony. ",
-  "dictionary:relatedItems": "Powiązane Przedmioty ",
-  "dictionary:rememberSettings": "Zapamiętaj ustawienia ",
-  "dictionary:rememberSettingsDescription": "Zaznacz tą opcję, a Twoje ustawienia zostaną zapamiętane następnym razem, gdy odwiedzisz SuttaCentral. ",
-  "dictionary:rememberSettingsDisabled": "Wybrane ustawienia nie zostaną zapamiętane przy następnej wizycie w SuttaCentral. ",
-  "dictionary:rememberSettingsEnabled": "Wybrane ustawienia zostaną zapamiętane następnym razem podczas wizyty w SuttaCentral. ",
   "dictionary:scriptChanged": "Pali jest teraz pokazywany w alfabecie {paliScript}. ",
   "dictionary:sideBySide": "Obok ",
   "dictionary:similarSpelling": "Podobna Pisownia ",
@@ -30,7 +24,6 @@
   "dictionary:textualInformationDisabled": "Dodatkowe informacje są teraz wyłączone. ",
   "dictionary:textualInformationEnabled": "Dodatkowe informacje są teraz włączone. ",
   "dictionary:viewRoot": "Pokaż oryginalny tekst i tłumaczenie ",
-  "dictionary:viewTextualInfo": "Pokaż dodatkowe informacje ",
   "donate:amount": "Kwota ",
   "donate:chooseFrequency": "Możesz wysłać jednorazową lub comiesięczną dotację: ",
   "donate:currency": "Waluta ",
@@ -54,8 +47,7 @@
   "interface:about": "O nas ",
   "interface:aboutTitle": "O NAS ",
   "interface:acknowledgments": "Podziękowania ",
-  "interface:acknowledgmentsTitle": "Acknowledgements ",
-  "interface:browseTooltip": "Przeglądaj stronę w innym języku ",
+  "interface:acknowledgmentsTitle": "Acknowledgments ",
   "interface:darkTheme": "Ciemna szata graficzna ",
   "interface:dictionaryResults": "SuttaCentral — Wyniki wyszukiwania w słowniku ",
   "interface:discourses": "DYSKURSY ",
@@ -161,7 +153,6 @@
   "suttaplex:advanced": "Rekomendowane dla zaawansowanych studentów ",
   "suttaplex:alternateText": "Numer alternatywny w wydaniu {book}: ",
   "suttaplex:beginner": "Rekomendowane dla początkujących studentów ",
-  "suttaplex:blurb": "Wprowadzenie ",
   "suttaplex:countParallel": "{count} podobieństwo ",
   "suttaplex:countParallels": "{count} podobieństw ",
   "suttaplex:edition": "edycja ",
