--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -619,7 +619,7 @@
   "dn34:2.2.60": "Die Vielfalt der Elemente führt zur Vielfalt der Kontakte. Die Vielfalt der Kontakte führt zur Vielfalt der Gefühle. Die Vielfalt der Gefühle führt zur Vielfalt der Wahrnehmungen. Die Vielfalt der Wahrnehmungen führt zur Vielfalt der Gedanken. Die Vielfalt der Gedanken führt zur Vielfalt des Sehnens. Die Vielfalt des Sehnens führt zur Vielfalt der Leidenschaften. Die Vielfalt der Leidenschaften führt zu den vielfältigen Arten der Suche. Die vielfältigen Arten der Suche führen zur Vielfalt des Gewinns. ",
   "dn34:2.2.62": "*Welche neun Dinge müssen erzeugt werden?* ",
   "dn34:2.2.63": "Neun Wahrnehmungen: ",
-  "dn34:2.2.64": "die Wahrnehmung der unattraktiven Natur, die Wahrnehmung des Todes, die Wahrnehmung der Widerwärtigkeit der Nahrung, die Wahrnehmung der Entfremdung von der ganzen Welt, die Wahrnehmung der Unbeständigkeit, die Wahrnehmung des Leidens in der Unbeständigkeit, die Wahrnehmung des Fehlens eines Selbst im Leiden, die Wahrnehmung des Aufgebens und die Wahrnehmung des Schwindens. ",
+  "dn34:2.2.64": "die Wahrnehmung der abstoßenden Natur, die Wahrnehmung des Todes, die Wahrnehmung der Widerwärtigkeit der Nahrung, die Wahrnehmung der Entfremdung von der ganzen Welt, die Wahrnehmung der Unbeständigkeit, die Wahrnehmung des Leidens in der Unbeständigkeit, die Wahrnehmung des Fehlens eines Selbst im Leiden, die Wahrnehmung des Aufgebens und die Wahrnehmung des Schwindens. ",
   "dn34:2.2.66": "*Welche neun Dinge müssen unmittelbar erkannt werden?* ",
   "dn34:2.2.67": "Neun fortschreitende Meditationen: ",
   "dn34:2.2.68": "Da tritt eine Nonne, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … ",
