Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -1,4 +1,4 @@
 {
-  "iti109:2.1": "Come una persona potrebbe essere portata via dalla corrente di un fiume piacevole e bello, ",
+  "iti109:2.1": "Immaginate se una persona fosse portata via dalla corrente di un fiume piacevole e bello, ",
   "iti109:3.2": "e questo qui il significato: "
 }
