Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "iti109:2.1": "Immaginate se una persona fosse portata via dalla corrente di un fiume piacevole e bello, ",
   "iti109:2.2": "e una persona in piedi sulla riva, dotata di vista, avendolo visto gli dicesse: ",
+  "iti109:2.3": "‘Attento amico, sei portato via dalla corrente di un fiume piacevole e bello, ma sotto c’è un lago con onde e mulinelli, pieno di animali feroci e mostri. Attento amico, perché se raggiungi il lago andrai incontro alla morte, o vicino alla morte o a della sofferenza.’ ",
   "iti109:3.2": "e questo qui il significato: "
 }
