Translations by renaldoaluska to translation/id/site/name/super-name_translation-id-site.json

--- a/translation/id/site/name/super-name_translation-id-site.json
+++ b/translation/id/site/name/super-name_translation-id-site.json
@@ -1,7 +1,7 @@
 {
   "super-name:1.sutta": "Keranjang Diskursus ",
   "super-name:2.long": "Koleksi Diskursus Panjang ",
-  "super-name:3.dn": "Kumpulan Panjang (Pāḷi) ",
+  "super-name:3.dn": "Kumpulan Panjang ",
   "super-name:4.da": "Kompilasi Panjang ",
   "super-name:5.da-ot": "Diskursus Panjang Lainnya ",
   "super-name:6.middle": "Koleksi Diskursus Menengah ",
