Translations by renaldoaluska to translation/id/site/name/super-name_translation-id-site.json

--- a/translation/id/site/name/super-name_translation-id-site.json
+++ b/translation/id/site/name/super-name_translation-id-site.json
@@ -9,7 +9,7 @@
   "super-name:8.ma": "Kompilasi Menengah ",
   "super-name:9.ma-ot": "Diskursus Menengah Lainnya ",
   "super-name:10.linked": "Koleksi Diskursus Bertaut ",
-  "super-name:11.sn": "Kumpulan Bertaut (Pāḷi) ",
+  "super-name:11.sn": "Kumpulan Bertaut ",
   "super-name:12.sa": "Kompilasi Bertaut 1 ",
   "super-name:13.sa-2": "Kompilasi Bertaut 2 ",
   "super-name:14.sa-3": "Kompilasi Bertaut 3 ",
