Translations by renaldoaluska to translation/id/site/name/super-name_translation-id-site.json

--- a/translation/id/site/name/super-name_translation-id-site.json
+++ b/translation/id/site/name/super-name_translation-id-site.json
@@ -15,7 +15,7 @@
   "super-name:14.sa-3": "Kompilasi Bertaut 3 ",
   "super-name:15.sa-ot": "Diskursus Bertaut Lainnya ",
   "super-name:16.numbered": "Koleksi Diskursus Berangka ",
-  "super-name:17.an": "Kumpulan Berangka (Pāḷi) ",
+  "super-name:17.an": "Kumpulan Berangka ",
   "super-name:18.ea": "Kompilasi Berangka 1 ",
   "super-name:19.ea-2": "Kompilasi Berangka 2 ",
   "super-name:20.ea-ot": "Diskursus Berangka Lainnya ",
