Translations by renaldoaluska to translation/id/site/name/super-name_translation-id-site.json

--- a/translation/id/site/name/super-name_translation-id-site.json
+++ b/translation/id/site/name/super-name_translation-id-site.json
@@ -20,7 +20,7 @@
   "super-name:19.ea-2": "Kompilasi Berangka 2 ",
   "super-name:20.ea-ot": "Diskursus Berangka Lainnya ",
   "super-name:21.minor": "Koleksi Diskursus Kecil ",
-  "super-name:22.kn": "Kumpulan Kecil (Pāḷi) ",
+  "super-name:22.kn": "Kumpulan Kecil ",
   "super-name:23.kp": "Petikan Pendek ",
   "super-name:24.dhp": "Bait Kebenaran (Pāḷi) ",
   "super-name:25.ud": "Seruan Luhur ",
