Translations by renaldoaluska to translation/id/site/name/super-name_translation-id-site.json

--- a/translation/id/site/name/super-name_translation-id-site.json
+++ b/translation/id/site/name/super-name_translation-id-site.json
@@ -22,7 +22,7 @@
   "super-name:21.minor": "Koleksi Diskursus Kecil ",
   "super-name:22.kn": "Kumpulan Kecil ",
   "super-name:23.kp": "Petikan Pendek ",
-  "super-name:24.dhp": "Bait Kebenaran (Pāḷi) ",
+  "super-name:24.dhp": "Bait Kebenaran ",
   "super-name:25.ud": "Seruan Luhur ",
   "super-name:26.iti": "Sedemikian Dikatakan ",
   "super-name:27.snp": "Koleksi Diskursus ",
