--- a/translation/id/site/name/super-name_translation-id-site.json
+++ b/translation/id/site/name/super-name_translation-id-site.json
@@ -79,7 +79,7 @@
   "super-name:78.tf": "Fragmen Manuskrip Bahasa Tokharia ",
   "super-name:79.uf": "Fragmen Manuskrip Uighur ",
   "super-name:80.vinaya": "Keranjang Disiplin ",
-  "super-name:81.pli-tv-vi": "Disiplin Aliran Theravāda (Pāḷi) ",
+  "super-name:81.pli-tv-vi": "Disiplin Aliran Theravāda ",
   "super-name:82.pli-tv-bu-vb": "Analisis Aturan Bhikkhu ",
   "super-name:83.pli-tv-bi-vb": "Analisis Aturan Bhikkhunī ",
   "super-name:84.pli-tv-kd": "Bagian Aturan ",
