--- a/translation/id/site/name/super-name_translation-id-site.json
+++ b/translation/id/site/name/super-name_translation-id-site.json
@@ -5,7 +5,7 @@
   "super-name:4.da": "Kompilasi Panjang ",
   "super-name:5.da-ot": "Diskursus Panjang Lainnya ",
   "super-name:6.middle": "Koleksi Diskursus Menengah ",
-  "super-name:7.mn": "Kumpulan Menengah (Pāḷi) ",
+  "super-name:7.mn": "Kumpulan Menengah ",
   "super-name:8.ma": "Kompilasi Menengah ",
   "super-name:9.ma-ot": "Diskursus Menengah Lainnya ",
   "super-name:10.linked": "Koleksi Diskursus Bertaut ",
