--- a/translation/id/site/name/super-name_translation-id-site.json
+++ b/translation/id/site/name/super-name_translation-id-site.json
@@ -185,7 +185,7 @@
   "super-name:184.san-bu-pm-qizil": "Aturan Bhikkhu Edisi Qizil ",
   "super-name:185.pgd-pm-bf13": "Aturan Bhikkhu (Teks Lainnya) ",
   "super-name:186.abhidhamma": "Keranjang Dhamma Luhur ",
-  "super-name:187.pli-tv-ab": "Dhamma Luhur Aliran Theravāda (Pāḷi) ",
+  "super-name:187.pli-tv-ab": "Dhamma Luhur Aliran Theravāda ",
   "super-name:188.ds": "Ringkasan Fenomena ",
   "super-name:189.vb": "Kitab Analisis ",
   "super-name:190.dt": "Diskusi Elemen ",
