Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -6,5 +6,6 @@
   "iti109:3.1": "Cercatori, simile a questa persona vi ho offerto un insegnamento per il vostro bene ",
   "iti109:3.2": "e questo qui il significato: ",
   "iti109:3.3": "‘la corrente di un fiume,’ è sinonimo di questa arsura. ",
-  "iti109:4.1": "‘piacevole e bello’ è sinonimo i sei sensi interni. "
+  "iti109:4.1": "‘piacevole e bello’ è sinonimo i sei sensi interni. ",
+  "iti109:5.1": "‘Sotto c’è un lago’ è sinonimo delle cinque catene inferiori. "
 }
