Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -8,5 +8,6 @@
   "iti109:3.3": "‘la corrente di un fiume,’ è sinonimo di questa arsura. ",
   "iti109:4.1": "‘piacevole e bello’ è sinonimo i sei sensi interni. ",
   "iti109:5.1": "‘Sotto c’è un lago’ è sinonimo delle cinque catene inferiori. ",
-  "iti109:6.1": "‘Il pericolo delle onde’ è sinonimo di questa rabbia e agitazione. "
+  "iti109:6.1": "‘Il pericolo delle onde’ è sinonimo di questa rabbia e agitazione. ",
+  "iti109:7.1": "‘Ritorna’ è sinonimo dei cinque oggetti dei piaceri sensuali. "
 }
