Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -11,5 +11,6 @@
   "iti109:6.1": "‘Il pericolo delle onde’ è sinonimo di questa rabbia e agitazione. ",
   "iti109:7.1": "‘Ritorna’ è sinonimo dei cinque oggetti dei piaceri sensuali. ",
   "iti109:8.1": "‘Casa del demone???’ è sinonimo della donna. ",
-  "iti109:9.1": "‘Controcorrente’ è sinonimo di rinuncia. "
+  "iti109:9.1": "‘Controcorrente’ è sinonimo di rinuncia. ",
+  "iti109:10.1": "‘con mani e piedi farebbe uno sforzo’ è sinonimo di sforzarsi (arouse energy). "
 }
