--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -13,5 +13,6 @@
   "iti109:8.1": "‘Casa del demone???’ è sinonimo della donna. ",
   "iti109:9.1": "‘Controcorrente’ è sinonimo di rinuncia. ",
   "iti109:10.1": "‘con mani e piedi farebbe uno sforzo’ è sinonimo di sforzarsi (arouse energy). ",
-  "iti109:11.1": "‘una persona in piedi sulla riva, dotata di vista’ è sinonimo del Tathāgata, l’Arahant, il Sammāsambuddha. "
+  "iti109:11.1": "‘una persona in piedi sulla riva, dotata di vista’ è sinonimo del Tathāgata, l’Arahant, il Sammāsambuddha. ",
+  "iti109:12.1": "Anche in compagnia del dukkha lascerebbe andare i piaceri sensuali, "
 }
