--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -15,5 +15,6 @@
   "iti109:10.1": "‘con mani e piedi farebbe uno sforzo’ è sinonimo di sforzarsi (arouse energy). ",
   "iti109:11.1": "‘una persona in piedi sulla riva, dotata di vista’ è sinonimo del Tathāgata, l’Arahant, il Sammāsambuddha. ",
   "iti109:12.1": "E con il dukkha lascerebbe andare anche i piaceri sensuali, ",
-  "iti109:12.2": "desiderando di arrivare alla liberazione da ogni giogo. "
+  "iti109:12.2": "desiderando di arrivare alla liberazione da ogni giogo. ",
+  "iti109:12.3": "Conoscendo perfettamente con il cuore ben liberato, "
 }
