Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -17,5 +17,6 @@
   "iti109:12.1": "E con il dukkha lascerebbe andare anche i piaceri sensuali, ",
   "iti109:12.2": "desiderando di arrivare alla liberazione da ogni giogo. ",
   "iti109:12.3": "Conoscendo perfettamente con il cuore ben liberato, ",
-  "iti109:12.4": "verrebbe toccato dalla liberazione qui e adesso "
+  "iti109:12.4": "verrebbe toccato dalla liberazione qui e adesso ",
+  "iti109:12.5": "Chi ha perfetta conoscenza, completato la vita spirituale "
 }
