--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -19,5 +19,5 @@
   "iti109:12.3": "Conoscendo perfettamente con il cuore ben liberato, ",
   "iti109:12.4": "verrebbe toccato dalla liberazione qui e adesso ",
   "iti109:12.5": "Chi ha perfetta conoscenza, completato la vita spirituale ",
-  "iti109:12.6": "quello si chiama uno che è giunto alla fine del mondo, che è andato oltre” "
+  "iti109:12.6": "quello si chiama uno che è giunto alla fine del mondo, che è andato oltre.” "
 }
