Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti109:5.1": "‘Sotto c’è un lago’ è sinonimo delle cinque catene inferiori. ",
   "iti109:6.1": "‘Il pericolo delle onde’ è sinonimo di questa rabbia e agitazione. ",
   "iti109:7.1": "‘Ritorna’ è sinonimo dei cinque oggetti dei piaceri sensuali. ",
-  "iti109:8.1": "‘Animali feroci e demoni’ è sinonimo della donna. ",
+  "iti109:8.1": "‘Animali feroci e demoni’ è sinonimo della donna. [persona attraente?] ",
   "iti109:9.1": "‘Controcorrente’ è sinonimo di rinuncia. ",
   "iti109:10.1": "‘con mani e piedi farebbe uno sforzo’ è sinonimo di sforzarsi (arouse energy). ",
   "iti109:11.1": "‘una persona in piedi sulla riva, dotata di vista’ è sinonimo del Tathāgata, l’Arahant, il Sammāsambuddha. ",
