--- a/translation/de/sabbamitta/sutta/an/an7/an7.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.49_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an7.49:2.2": "Das habe ich gesagt, aber inwiefern habe ich es gesagt? ",
   "an7.49:2.3": "Wenn eine Nonne häufig mit einem Geist meditiert, der mit der Wahrnehmung der abstoßenden Natur gestärkt ist, zieht sich ihr Geist vom Geschlechtsverkehr zurück. Sie weicht davor zurück, wendet sich ab, lässt sich nicht hineinziehen. Und Gleichmut oder Abscheu werden gefestigt. ",
   "an7.49:2.4": "Wie wenn man eine Hühnerfeder oder ein Stück Sehne in ein Feuer wirft: Es schnurrt zusammen, schrumpft, rollt sich ein und streckt sich nicht aus. ",
-  "an7.49:2.5": "Ebenso ist es, wenn eine Nonne häufig mit einem Geist meditiert, der mit der Wahrnehmung der unattraktiven Natur gefestigt ist: Ihr Geist zieht sich vom Geschlechtsverkehr zurück … ",
+  "an7.49:2.5": "Ebenso ist es, wenn eine Nonne häufig mit einem Geist meditiert, der mit der Wahrnehmung der abstoßenden Natur gefestigt ist: Ihr Geist zieht sich vom Geschlechtsverkehr zurück … ",
   "an7.49:3.1": "Wenn eine Nonne häufig mit einem Geist meditiert, der mit der Wahrnehmung der unattraktiven Natur gefestigt ist, und ihr Geist wird zum Geschlechtsverkehr hingezogen und nicht abgestoßen, ",
   "an7.49:3.2": "dann sollte sie wissen: ‚Die Wahrnehmung der unattraktiven Natur habe ich nicht entwickelt. Ich habe keinen erhabenen Zustand erreicht, der höher wäre als zuvor. Ich habe keine Frucht der Entwicklung erlangt.‘ ",
   "an7.49:3.3": "So ist sie sich der Lage bewusst. ",
