--- a/translation/de/sabbamitta/sutta/kn/iti/vagga9/iti85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/iti/vagga9/iti85_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "iti85:0.1": "So wurde es gesagt 85 ",
   "iti85:0.2": "Das Dreierbuch ",
   "iti85:0.3": "4. Das vierte Kapitel ",
-  "iti85:0.4": "Die unattraktive Natur beobachten ",
+  "iti85:0.4": "Die abstoßende Natur beobachten ",
   "iti85:1.1": "Das wurde vom Buddha, dem Vollendeten, gesagt; das habe ich gehört: ",
   "iti85:2.1": "„Mönche und Nonnen, meditiert, indem ihr die unattraktive Natur des Körpers beobachtet. ",
   "iti85:2.2": "Habt die Achtsamkeit auf den Atem im Innern fest vor euch verankert. ",
