--- a/translation/de/sabbamitta/sutta/kn/iti/vagga9/iti85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/iti/vagga9/iti85_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "iti85:2.6": "Wenn ihr meditiert, indem ihr die Unbeständigkeit aller Bedingungen beobachtet, wird Unwissenheit aufgegeben und Wissen entsteht.“ ",
   "iti85:2.7": "Der Buddha sprach diese Sache. ",
   "iti85:2.8": "Dazu wird gesagt: ",
-  "iti85:3.1": "„Wer die unattraktive Natur des Körpers beobachtet, ",
+  "iti85:3.1": "„Wer das Abstoßende am Körper beobachtet, ",
   "iti85:3.2": "achtsam auf den Atem ",
   "iti85:3.3": "und stets eifrig ist, ",
   "iti85:3.4": "sieht das Beruhigen aller Vorgänge. ",
