--- a/translation/de/sabbamitta/sutta/an/an7/an7.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.49_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an7.49:0.3": "Wahrnehmungen, ausführlich ",
   "an7.49:1.1": "„Mönche und Nonnen, wenn sieben Wahrnehmungen entwickelt und ausgebaut werden, bringen sie reiche Frucht und reichen Segen. Sie gipfeln in der Unsterblichkeit und enden in der Unsterblichkeit. ",
   "an7.49:1.2": "Welche sieben? ",
-  "an7.49:1.3": "Die Wahrnehmung der abstoßenden Natur, die Wahrnehmung des Todes, die Wahrnehmung der Widerwärtigkeit der Nahrung, die Wahrnehmung der Entfremdung von der ganzen Welt, die Wahrnehmung der Unbeständigkeit, die Wahrnehmung des Leidens in der Unbeständigkeit und die Wahrnehmung des Fehlens eines Selbst im Leiden. ",
+  "an7.49:1.3": "Die Wahrnehmung des Abstoßenden, die Wahrnehmung des Todes, die Wahrnehmung der Widerwärtigkeit der Nahrung, die Wahrnehmung der Entfremdung von der ganzen Welt, die Wahrnehmung der Unbeständigkeit, die Wahrnehmung des Leidens in der Unbeständigkeit und die Wahrnehmung des Fehlens eines Selbst im Leiden. ",
   "an7.49:1.4": "Wenn diese sieben Wahrnehmungen entwickelt und ausgebaut werden, bringen sie reiche Frucht und reichen Segen. Sie gipfeln in der Unsterblichkeit und enden in der Unsterblichkeit. ",
   "an7.49:2.1": "‚Wenn die Wahrnehmung der abstoßenden Natur entwickelt und ausgebaut wird, bringt sie reiche Frucht und reichen Segen. Sie gipfelt in der Unsterblichkeit und endet in der Unsterblichkeit.‘ ",
   "an7.49:2.2": "Das habe ich gesagt, aber inwiefern habe ich es gesagt? ",
