--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -1,4 +1,5 @@
 {
   "mn4:0.1": "Discours de Longueur Moyenne 4 ",
-  "mn4:0.2": "La peur et l’effroi "
+  "mn4:0.2": "La peur et l’effroi ",
+  "mn4:1.1": "Ainsi ai-je entendu. "
 }
