--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -3,5 +3,6 @@
   "mn4:0.2": "La peur et l’effroi ",
   "mn4:1.1": "Ainsi ai-je entendu. ",
   "mn4:1.2": "À une époque, le Bouddha séjournait près de Sāvatthī dans la forêt de Jeta, au monastère d’Anāthapiṇḍika. ",
-  "mn4:2.1": "Alors, le brahmane Jānussoṇi se rendit auprès du Bouddha, échangea des salutations avec lui. "
+  "mn4:2.1": "Alors, le brahmane Jānussoṇi se rendit auprès du Bouddha, échangea des salutations avec lui. ",
+  "mn4:2.2": "Après les civilités et un échange de politesses, il prit place d’un côté et s’adressa au Bouddha : "
 }
