--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -6,5 +6,6 @@
   "mn4:2.1": "Alors, le brahmane Jānussoṇi se rendit auprès du Bouddha, échangea des salutations avec lui. ",
   "mn4:2.2": "Après les civilités et un échange de politesses, il prit place d’un côté et s’adressa au Bouddha : ",
   "mn4:2.3": "« Maître Gotama, ces messieurs qui ont quitté la vie laïque pour la vie d’ascète par foi en Maître Gotama, ont Maître Gotama pour les guider, les aider et les encourager. ",
-  "mn4:2.4": "Et ces personnes suivent l’exemple de Maître Gotama. » "
+  "mn4:2.4": "Et ces personnes suivent l’exemple de Maître Gotama. » ",
+  "mn4:2.5": "« C’est si vrai, brahmane ! Tout ce que vous dites est vrai, brahmane ! » "
 }
