--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -8,5 +8,6 @@
   "mn4:2.3": "« Maître Gotama, ces messieurs qui ont quitté la vie laïque pour la vie d’ascète par foi en Maître Gotama, ont Maître Gotama pour les guider, les aider et les encourager. ",
   "mn4:2.4": "Et ces personnes suivent l’exemple de Maître Gotama. » ",
   "mn4:2.5": "« C’est si vrai, brahmane ! Tout ce que vous dites est vrai, brahmane ! » ",
-  "mn4:2.8": "« Mais Maître Gotama, les lieux isolés dans les régions sauvages et les forêts sont difficiles à habiter. Il est compliqué de maintenir et de trouver de la joie dans la solitude. "
+  "mn4:2.8": "« Mais Maître Gotama, les lieux isolés dans les régions sauvages et les forêts sont difficiles à habiter. Il est compliqué de maintenir et de trouver de la joie dans la solitude. ",
+  "mn4:2.9": "Les forêts paraissent voler l’esprit d’un monastique qui ne parvient pas à atteindre la concentration méditative, le samādhi. » "
 }
