Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -11,5 +11,6 @@
   "mn4:2.8": "« Mais Maître Gotama, les lieux isolés dans les régions sauvages et les forêts sont difficiles à habiter. Il est compliqué de maintenir et de trouver de la joie dans la solitude. ",
   "mn4:2.9": "Les forêts paraissent voler l’esprit d’un monastique qui ne parvient pas à atteindre la concentration méditative, le samādhi. » ",
   "mn4:2.10": "« C’est si vrai, brahmane ! Tout ce que vous dites est vrai, brahmane ! » ",
-  "mn4:3.1": "Avant mon éveil – alors que je n’étais pas encore éveillé, mais résolu à l’être – je pensais également, "
+  "mn4:3.1": "Avant mon éveil – alors que je n’étais pas encore éveillé, mais résolu à l’être – je pensais également, ",
+  "mn4:3.2": "‹ Les lieux isolés dans les régions sauvages et les forêts sont difficiles à habiter. Il est compliqué de maintenir et de trouver de la joie dans la solitude. "
 }
