Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -15,5 +15,6 @@
   "mn4:3.2": "‹ Les lieux isolés dans les régions sauvages et les forêts sont difficiles à habiter. Il est compliqué de maintenir et de trouver de la joie dans la solitude. ",
   "mn4:3.3": "Les forêts paraissent voler l’esprit d’un monastique qui ne parvient pas à atteindre la concentration méditative, le samādhi. › ",
   "mn4:4.1": "Puis j’ai pensé, ",
-  "mn4:4.2": "« Il y a des ascètes et des brahmanes à la conduite impure du corps, de la parole et de l’esprit qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts dans leur conduite, commettent des actions nuisibles, effrayantes et dangereuses. "
+  "mn4:4.2": "« Il y a des ascètes et des brahmanes à la conduite impure du corps, de la parole et de l’esprit qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts dans leur conduite, commettent des actions nuisibles, effrayantes et dangereuses. ",
+  "mn4:4.3": "Mais je ne me retire pas dans des lieux isolés dans les régions sauvages et les forêts, avec une conduite impure du corps, de la parole et de l’esprit. "
 }
