Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -19,5 +19,6 @@
   "mn4:4.3": "Mais je ne me retire pas dans des lieux isolés dans les régions sauvages et les forêts, avec une conduite impure du corps, de la parole et de l’esprit. ",
   "mn4:4.4": "Ma conduite est pure. ",
   "mn4:4.5": "Je suis l’un de ces nobles qui se retirent dans des lieux isolés dans les régions sauvages et les forêts, avec une conduite pure du corps, de la parole et de l’esprit. › ",
-  "mn4:4.6": "Conscient de cette pureté de conduite chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. "
+  "mn4:4.6": "Conscient de cette pureté de conduite chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. ",
+  "mn4:5.1": "Puis j’ai pensé, "
 }
