Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -21,5 +21,6 @@
   "mn4:4.5": "Je suis l’un de ces nobles qui se retirent dans des lieux isolés dans les régions sauvages et les forêts, avec une conduite pure du corps, de la parole et de l’esprit. › ",
   "mn4:4.6": "Conscient de cette pureté de conduite chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. ",
   "mn4:5.1": "Puis j’ai pensé, ",
-  "mn4:5.4": "‹ Il y a des ascètes et des brahmanes aux moyens de subsistance impurs qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts dans leurs moyens de subsistance, commettent des actions nuisibles, effrayantes et dangereuses. "
+  "mn4:5.4": "‹ Il y a des ascètes et des brahmanes aux moyens de subsistance impurs qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts dans leurs moyens de subsistance, commettent des actions nuisibles, effrayantes et dangereuses. ",
+  "mn4:6.1": "Mais je ne me retire pas dans des lieux isolés dans les régions sauvages et les forêts avec des moyens de subsistance impurs. "
 }
