--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -25,5 +25,6 @@
   "mn4:6.1": "Mais je ne me retire pas dans des lieux isolés dans les régions sauvages et les forêts avec des moyens de subsistance impurs. ",
   "mn4:6.2": "Mes moyens de subsistance sont purs. ",
   "mn4:7.1": "Je suis l’un de ces nobles qui se retirent dans des lieux isolés dans les régions sauvages et les forêts avec des moyens de subsistance purs. › ",
-  "mn4:7.2": "Conscient de cette pureté des moyens de subsistance chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. "
+  "mn4:7.2": "Conscient de cette pureté des moyens de subsistance chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. ",
+  "mn4:8.1": "Puis j’ai pensé, "
 }
