--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -27,5 +27,6 @@
   "mn4:7.1": "Je suis l’un de ces nobles qui se retirent dans des lieux isolés dans les régions sauvages et les forêts avec des moyens de subsistance purs. › ",
   "mn4:7.2": "Conscient de cette pureté des moyens de subsistance chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. ",
   "mn4:8.1": "Puis j’ai pensé, ",
-  "mn4:8.2": "‹ Il y a des ascètes et des brahmanes remplis de désir pour les plaisirs sensuels, avec une convoitise aiguë… "
+  "mn4:8.2": "‹ Il y a des ascètes et des brahmanes remplis de désir pour les plaisirs sensuels, avec une convoitise aiguë… ",
+  "mn4:8.3": "‹ Il y a des ascètes et des brahmanes à la conduite impure du corps, de la parole et de l’esprit qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts dans leur conduite, commettent des actions nuisibles, effrayantes et dangereuses. "
 }
