--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -28,5 +28,6 @@
   "mn4:7.2": "Conscient de cette pureté des moyens de subsistance chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. ",
   "mn4:8.1": "Puis j’ai pensé, ",
   "mn4:8.2": "‹ Il y a des ascètes et des brahmanes remplis de désir pour les plaisirs sensuels, avec une convoitise aiguë… ",
-  "mn4:8.3": ""
+  "mn4:8.3": "",
+  "mn4:8.4": "Je ne suis pas rempli de désir… › "
 }
