Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -31,5 +31,6 @@
   "mn4:8.3": "",
   "mn4:8.4": "Je ne suis pas rempli de désir… › ",
   "mn4:9.2": "‹ Il y a des ascètes et des brahmanes remplis de malveillance, avec des intentions malicieuses… ",
-  "mn4:9.4": "J’ai un cœur rempli d’amour… › "
+  "mn4:9.4": "J’ai un cœur rempli d’amour… › ",
+  "mn4:10.2": "‹ Il y a des ascètes et des brahmanes accablés par la torpeur et la somnolence… "
 }
