--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -34,5 +34,6 @@
   "mn4:9.4": "J’ai un cœur rempli d’amour… › ",
   "mn4:10.2": "‹ Il y a des ascètes et des brahmanes accablés par la torpeur et la somnolence… ",
   "mn4:10.4": "Je suis exempt de torpeur et de somnolence… › ",
-  "mn4:11.2": "‹ Il y a des ascètes et des brahmanes agités, sans paix d’esprit… "
+  "mn4:11.2": "‹ Il y a des ascètes et des brahmanes agités, sans paix d’esprit… ",
+  "mn4:11.4": "Mon esprit est paisible… › "
 }
