--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -36,5 +36,6 @@
   "mn4:10.4": "Je suis exempt de torpeur et de somnolence… › ",
   "mn4:11.2": "‹ Il y a des ascètes et des brahmanes agités, sans paix d’esprit… ",
   "mn4:11.4": "Mon esprit est paisible… › ",
-  "mn4:12.2": "‹ Il y a des ascètes et des brahmanes doutant et incertains… "
+  "mn4:12.2": "‹ Il y a des ascètes et des brahmanes doutant et incertains… ",
+  "mn4:13.2": "‹ Il y a des ascètes et des brahmanes qui se glorifient eux-mêmes et rabaissent les autres… "
 }
