--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -38,5 +38,6 @@
   "mn4:11.4": "Mon esprit est paisible… › ",
   "mn4:12.2": "‹ Il y a des ascètes et des brahmanes doutant et incertains… ",
   "mn4:13.2": "‹ Il y a des ascètes et des brahmanes qui se glorifient eux-mêmes et rabaissent les autres… ",
-  "mn4:13.4": "Je ne me glorifie pas et ne rabaisse pas les autres… › "
+  "mn4:13.4": "Je ne me glorifie pas et ne rabaisse pas les autres… › ",
+  "mn4:14.2": "‹ Il y a des ascètes et des brahmanes lâches et craintifs… "
 }
