Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -40,5 +40,6 @@
   "mn4:13.2": "‹ Il y a des ascètes et des brahmanes qui se glorifient eux-mêmes et rabaissent les autres… ",
   "mn4:13.4": "Je ne me glorifie pas et ne rabaisse pas les autres… › ",
   "mn4:14.2": "‹ Il y a des ascètes et des brahmanes lâches et craintifs… ",
-  "mn4:14.4": "Je ne suis pas peureux… › "
+  "mn4:14.4": "Je ne suis pas peureux… › ",
+  "mn4:15.2": "‹ Il y a des ascètes et des brahmanes qui désir possessions, honneur et popularité… "
 }
