--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -42,5 +42,6 @@
   "mn4:14.2": "‹ Il y a des ascètes et des brahmanes lâches et craintifs… ",
   "mn4:14.4": "Je ne suis pas peureux… › ",
   "mn4:15.2": "‹ Il y a des ascètes et des brahmanes qui désir possessions, honneur et popularité… ",
-  "mn4:15.4": "J’ai peu de désir… › "
+  "mn4:15.4": "J’ai peu de désir… › ",
+  "mn4:16.2": "‹ Il y a des ascètes et des brahmanes paresseux et manquant d’énergie... "
 }
