Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -37,6 +37,7 @@
   "mn4:11.2": "‹ Il y a des ascètes et des brahmanes agités, sans paix d’esprit… ",
   "mn4:11.4": "Mon esprit est paisible… › ",
   "mn4:12.2": "‹ Il y a des ascètes et des brahmanes doutant et incertains… ",
+  "mn4:12.4": "J’ai surmonté le doute… › ",
   "mn4:13.2": "‹ Il y a des ascètes et des brahmanes qui se glorifient eux-mêmes et rabaissent les autres… ",
   "mn4:13.4": "Je ne me glorifie pas et ne rabaisse pas les autres… › ",
   "mn4:14.2": "‹ Il y a des ascètes et des brahmanes lâches et craintifs… ",
