Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -50,5 +50,6 @@
   "mn4:17.4": "Je suis attentif… › ",
   "mn4:18.2": "‹ Il y a des ascètes et des brahmanes qui manquent de méditation profonde, avec des esprits égarés… ",
   "mn4:18.4": "Je suis accompli en méditation profonde… › ",
-  "mn4:19.2": "‹ Il y a des ascètes et des brahmanes qui sont de peu de sagesse et obtus, qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts d’être peu avisé et obtus, commettent des actions nuisibles, effrayantes et dangereuses. "
+  "mn4:19.2": "‹ Il y a des ascètes et des brahmanes qui sont de peu de sagesse et obtus, qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts d’être peu avisé et obtus, commettent des actions nuisibles, effrayantes et dangereuses. ",
+  "mn4:19.3": "Mais je ne me retire pas dans des lieux isolés dans les régions sauvages et les forêts avec peu de sagesse et obtus. "
 }
