Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -56,5 +56,6 @@
   "mn4:19.5": "Je suis l’un de ces nobles qui se retirent dans des lieux isolés dans les régions sauvages et les forêts, accomplis en sagesse. › ",
   "mn4:19.6": "Conscient de cet accomplissement en sagesse chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. ",
   "mn4:20.1": "Puis j’ai pensé, ",
-  "mn4:20.2": "‹ Certaines nuits sont réputées pour être spécialement de mauvais augure : "
+  "mn4:20.2": "‹ Certaines nuits sont réputées pour être spécialement de mauvais augure : ",
+  "mn4:20.3": "les quatorzième, quinzième et huitième de la quinzaine. "
 }
