Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -58,5 +58,6 @@
   "mn4:20.1": "Puis j’ai pensé, ",
   "mn4:20.2": "‹ Certaines nuits sont réputées pour être spécialement de mauvais augure : ",
   "mn4:20.3": "les quatorzième, quinzième et huitième de la quinzaine. ",
-  "mn4:20.4": "Lors de telles nuits, si je devais résider dans ces lieux sacrés comme les ermitages, les sanctuaires forestiers ou les arbres vénérés, qui sont effrayants et font dresser les cheveux sur la tête, il est fort possible que j’y rencontre la peur et l’effroi. › "
+  "mn4:20.4": "Lors de telles nuits, si je devais résider dans ces lieux sacrés comme les ermitages, les sanctuaires forestiers ou les arbres vénérés, qui sont effrayants et font dresser les cheveux sur la tête, il est fort possible que j’y rencontre la peur et l’effroi. › ",
+  "mn4:20.5": "Quelque temps plus tard, c’est ce que j’ai fait. "
 }
